[package]
name = "eei"
version = "0.0.2"
authors = ["Richard Anaya"]
edition = "2018"
description="A hyper minimalistic but well documented interface to Ethereum Environment Interface"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/eei-rs"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]